# sway-scratch

./: Cargo.toml  README.md  docs.sh
.cargo/: config
.github/workflows/: build.yml
crates/docs/: Cargo.toml
crates/docs/src/: main.rs
crates/sway-scratch/: Cargo.toml
crates/sway-scratch/src/: lib.rs  main.rs
docs/: CNAME  index.html  sway-scratch-show.1  sway-scratch-show.html  sway-scratch.1
src/: main.rs
