[package]
name = "sway-scratch"
version = "0.1.0"
authors = ["Antony Kellermann <antony@aokellermann.dev>"]
edition = '2021'
description = "Automatically starting named scratchpads for sway"
readme = "README.md"
homepage = "https://github.com/aokellermann/sway-scratch"
repository = "https://github.com/aokellermann/sway-scratch"
license = "MIT"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3.23", features = ["derive"] }
swayipc-async = "2.0.1"
