[package]
name = "sway-scratch-docs"
version = "0.2.1"
authors = ["Antony Kellermann <antony@aokellermann.dev>"]
edition = '2021'
description = "Automatically starting named scratchpads for sway"
readme = "README.md"
homepage = "https://github.com/aokellermann/sway-scratch"
repository = "https://github.com/aokellermann/sway-scratch"
license = "MIT"

[dependencies]
sway-scratch = { path = "../sway-scratch" }
clap_mangen = "0.2.16"
clap = { version = "4.4.16" }
